--- a/Real_Time_Activity_Detection.ipynb
+++ b/Real_Time_Activity_Detection.ipynb
@@ -13,8 +13,8 @@
    "id": "e9d490c0",
    "metadata": {},
    "source": [
-    "<b>When you first download the NTU dataset, you will find them divided into multiple zip files, and all are extracted into one unstructered folder<b>\n",
-    "<b>Therefore, we will try to formalize the dataset, and categorize each video into a separate folder representing its class and corresponding label<b>"
+    "<b>When you first download the NTU dataset, you will find them divided into multiple zip files, and all are extracted into one unstructered folder</b>\n",
+    "<b>Therefore, we will try to formalize the dataset, and categorize each video into a separate folder representing its class and corresponding label</b>"
    ]
   },
   {
@@ -36,21 +36,21 @@
    "id": "53a521a0",
    "metadata": {},
    "source": [
-    "<b>For a clearer explanation of the dataset's structure, kindly refer to the dataset\\'s documentation (https://rose1.ntu.edu.sg/dataset/actionRecognition/)<b>"
+    "<b>For a clearer explanation of the dataset's structure, kindly refer to the dataset\\'s documentation (https://rose1.ntu.edu.sg/dataset/actionRecognition/)</b>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0d9d55cf",
+   "id": "250e9143",
    "metadata": {},
    "source": [
-    "<b>according to the documentation: Each file/folder name in both datasets is in the format of SsssCcccPpppRrrrAaaa (e.g., S001C002P003R002A013), in which sss is the setup number, ccc is the camera ID, ppp is the performer (subject) ID, rrr is the replication number (1 or 2), and aaa is the action class label.<b>\n",
+    "<b>according to the documentation: Each file/folder name in both datasets is in the format of SsssCcccPpppRrrrAaaa (e.g., S001C002P003R002A013), in which sss is the setup number, ccc is the camera ID, ppp is the performer (subject) ID, rrr is the replication number (1 or 2), and aaa is the action class label.</b>\n",
     " "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ab793d8e",
+   "id": "2cdcf337",
    "metadata": {},
    "source": [
     "<b>therefore, in order to correcrtly categorize each action into a different directory, we create a function that extracts the unique digits that represent a different activity (aaa), and insert each video file in a directory corresponding to that number , this way, we separate the different activities from each other </b>"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5c275bd1",
+   "id": "8ff507bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1d46892d",
+   "id": "62c307f1",
    "metadata": {},
    "outputs": [],
    "source": [
